Added api docs for resetting password
